--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-baseURL = "/"
+lbaseURL = "/"
 
 languageCode = "en-us"
 DefaultContentLanguage = "en"
 title = "Qredo Documentation"
-theme = "Docdock"
+theme = "docdock"
 # themesdir = "../.."
 pygmentsCodeFences = true
 pygmentsStyle = "monokailight"
@@ -28,7 +28,7 @@ enableMissingTranslationPlaceholders = false
 
 
 [params]
-editURL = "https://github.com/vjeantet/hugo-theme-docdock/edit/master/exampleSite/content/"
+editURL = "https://github.com/qredo"
 showVisitedLinks = true # default is false
 themeStyle = "flex" # "original" or "flex" # default "flex"
 themeVariant = "" # choose theme variant "green", "gold" , "gray", "blue" (default)
