--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ lbaseURL = "/"
 
 languageCode = "en-us"
 DefaultContentLanguage = "en"
-title = "Qredo Documentation"
+title = "Qredo Documentations"
 theme = "docdock"
 # themesdir = "../.."
 pygmentsCodeFences = true
