--- a/config.toml
+++ b/config.toml
@@ -46,6 +46,13 @@ home = [ "HTML", "RSS", "JSON"]
 
 [[menu.shortcuts]]
 pre = "<h3>More</h3>"
+name = "<i class='fa fa-slack'></i> <label>Slack Invite Page</label>"
+identifier = "sl"
+url = "https://github.com"
+weight = 10
+
+[[menu.shortcuts]]
+pre = "<h3>More</h3>"
 name = "<i class='fa fa-github'></i> <label>Github repos</label>"
 identifier = "ds"
 url = "https://github.com/Qredo"
