--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,22 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version
-      - image: circleci/golang:1.9
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/circleci/go-tool
+      - image: cibuilds/hugo:latest
+    working_directory: ~/hugo
+    environment:
+      HUGO_BUILD_DIR: ~/hugo/public
     steps:
-      - checkout
+      - run: apk update && apk add git
+      - run: apk add --update nodejs nodejs-npm
+      - run: npm install aerobatic-cli -g
+      - run: HUGO_ENV=production hugo -v -d $HUGO_BUILD_DIR
+      - run: |
+              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
+              --empty-alt-ignore --disable-external
+      - run: areo deploy -d ~/hugo/public
+    
+# `deploy` step: identical to a `run` step, but uses only one container:
+# https://circleci.com/docs/2.0/configuration-reference/#deploy
 
-      # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+
+
