--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
   build:
     docker:
       - image: cibuilds/hugo:latest
-    working_directory: ~/Qredo-Documentation
+    working_directory: ~/
     environment:
-      HUGO_BUILD_DIR: ~/Qredo-Documentation/public
+      HUGO_BUILD_DIR: ~/public
     steps:
       - run: apk update && apk add git
       - run: apk add --update nodejs nodejs-npm
@@ -17,7 +17,7 @@ jobs:
       - run: |
               htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
               --empty-alt-ignore --disable-external
-      - run: areo deploy -d ~/Qredo-Documentation/public
+      - run: areo deploy -d ~/public
     
 # `deploy` step: identical to a `run` step, but uses only one container:
 # https://circleci.com/docs/2.0/configuration-reference/#deploy
