--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,25 @@ jobs:
   build:
     docker:
       - image: cibuilds/hugo:latest
-    working_directory: ~/Qredo-Documentation/
+    working_directory: ~/hugo
     environment:
-      HUGO_BUILD_DIR: ~/Qredo-Documentation/public
+      HUGO_BUILD_DIR: ~/hugo/public
     steps:
+      # install git
       - run: apk update && apk add git
+      # checkout the repository
+      - checkout
+      # install node and nodejs
       - run: apk add --update nodejs nodejs-npm
+      # install aerobatic cli
       - run: npm install aerobatic-cli -g
+      # build with Hugo
       - run: HUGO_ENV=development hugo -v -d $HUGO_BUILD_DIR
       - run: |
               htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
               --empty-alt-ignore --disable-external
+
+      # deploy to aerobatic
       - run: areo deploy -d $HUGO_BUILD_DIR
     
 # `deploy` step: identical to a `run` step, but uses only one container:
