--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # install node and nodejs
       - run: apk add --update nodejs nodejs-npm
       # install aerobatic cli
-      - run: npm install aerobatic-cli -g
+      - run: npm install aerobatic-cli --global
       # build with Hugo
       - run: HUGO_ENV=development hugo -v -d $HUGO_BUILD_DIR
 #      - run: |
@@ -25,7 +25,7 @@ jobs:
 #              --empty-alt-ignore --disable-external
 
       # deploy to aerobatic
-      - run: areo deploy -d $HUGO_BUILD_DIR
+      - run: areo deploy -directory ~/hugo/public
     
 # `deploy` step: identical to a `run` step, but uses only one container:
 # https://circleci.com/docs/2.0/configuration-reference/#deploy
