--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,34 @@
 # Golang CircleCI 2.0 configuration file
-#
+
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-#version: 2
-#jobs:
-#  build:
-#    docker:
-#      - image: cibuilds/hugo:latest
-#    working_directory: ~/hugo
-#    environment:
-#      HUGO_BUILD_DIR: ~/hugo/public
-#    steps:
-      # install git
-#      - run: apk update && apk add git
-      # checkout the repository
-#      - checkout
-      # install node and nodejs
-#      - run: apk add --update nodejs nodejs-npm
-      # install aerobatic cli
-#      - run: npm install aerobatic-cli --global
-      # build with Hugo
-#      - run: HUGO_ENV=development hugo -v -d $HUGO_BUILD_DIR
+version: 2
+jobs:
+  build:
+    docker:
+      - image: cibuilds/hugo:latest
+    working_directory: ~/hugo
+    environment:
+      HUGO_BUILD_DIR: ~/hugo/public
+    steps:
+       install git
+      - run: apk update && apk add git
+
+    # install node and nodejs
+      - run: apk add --update nodejs nodejs-npm
+    #   install aerobatic cli
+      - run: npm install aerobatic-cli --global
+
+    #   checkout the repository
+      - checkout
+      
+    #   build with Hugo
+      - run: hugo -v -d public 
 #      - run: |
 #              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
 #              --empty-alt-ignore --disable-external
 
       # deploy to aerobatic
-#      - run: areo deploy -directory ~/hugo/public
+      - run: areo deploy -directory ~/hugo/public
     
 # `deploy` step: identical to a `run` step, but uses only one container:
 # https://circleci.com/docs/2.0/configuration-reference/#deploy
