--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     environment:
       HUGO_BUILD_DIR: ~/hugo/public
     steps:
-       install git
+#       install git
       - run: apk update && apk add git
 
     # install node and nodejs
