--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,6 @@ jobs:
     #   install aerobatic cli
       - run: npm install aerobatic-cli --global
 
-      - run: aero create
-
     #   checkout the repository
       - checkout
       
@@ -30,7 +28,7 @@ jobs:
 #              --empty-alt-ignore --disable-external
 
       # deploy to aerobatic
-      - run: sudo areo deploy -directory ~/hugo/public
+      - run: aero deploy -directory ~/hugo/public
     
 # `deploy` step: identical to a `run` step, but uses only one container:
 # https://circleci.com/docs/2.0/configuration-reference/#deploy
