--- a/aerobatic.yml
+++ b/aerobatic.yml
@@ -1,6 +1,13 @@
 id: 7b07e4a5-0c39-4705-bf76-eb9650ba0e07
-# deploy:
-#  ignore: []
+deploy:
+  ignore: []
 #  directory: public
 # plugins:
 #  - name: webpage
+#  - name: auth0
+#    path: /members
+#    options:
+#      clientId: LVXkgPZiZa2eHi2VpY5x5CbSbK1jZM2R
+#      clientSecret: $AUTH0_CLIENT_SECRET
+#      tenant: auth0-tenant-name
+
