--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,9 @@ jobs:
       
     #   build with Hugo
       - run: HUGO_ENV=production hugo -v -d $HUGO_BUILD_DIR 
-      - run: |
-              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
-              --empty-alt-ignore --disable-external
+#      - run: |
+#              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
+#              --empty-alt-ignore --disable-external
 
       # deploy to aerobatic
       - run: aero deploy --directory $HUGO_BUILD_DIR
