--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,18 +20,15 @@ jobs:
 
     #   checkout the repository
       - checkout
-      
+
     #   build with Hugo
-      - run: HUGO_ENV=production hugo -v -d $HUGO_BUILD_DIR 
-#      - run: |
-#              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
-#              --empty-alt-ignore --disable-external
+      - run: HUGO_ENV=production hugo -v -d $HUGO_BUILD_DIR
+      - run: |
+              htmlproofer $HUGO_BUILD_DIR --allow-hash-href --check-html \
+              --empty-alt-ignore --disable-external
 
       # deploy to aerobatic
       - run: aero deploy --directory $HUGO_BUILD_DIR
-    
+
 # `deploy` step: identical to a `run` step, but uses only one container:
 # https://circleci.com/docs/2.0/configuration-reference/#deploy
-
-
-
